  the serializability guarantees we need, so it is safe to take advantage
  of the potential speed gains.  The one major exception is the load
  connection, which requires an unchanging view of the database.

- Stored objects are now buffered in a database table rather than a file.

- Stopped using the LISTEN and NOTIFY statements in PostgreSQL since
  they are not reliable enough.

- Started using a prepared statement in PostgreSQL for getting the
  newest transaction ID quickly.

- Removed the code in the Oracle adapter for retrying connection attempts.
  (It is better to just reconfigure Oracle.)

- Added support for MySQL.  (Version 5.0 is probably the minimum.)

- Added the poll_interval option.  It reduces the frequency of database
  polls, but it also increases the potential for conflict errors on
  servers with high write volume.


PGStorage 0.4

- Began using the PostgreSQL LISTEN and NOTIFY statements as a shortcut
  for invalidation polling.

- Removed the commit_order code.  The commit_order idea was intended to
  allow concurrent commits, but that idea is a little too ambitious while
  other more important ideas are being tested.  Something like it may
  come later.

- Improved connection management: only one database connection is
  held continuously open per storage instance.

- Reconnect to the database automatically.

- Removed test mode.

- Switched from using a ZODB.Connection subclass to a ZODB patch.  The
  Connection class changes in subtle ways too often to subclass reliably;
  a patch is much safer.

- PostgreSQL 8.1 is now a dependency because PGStorage uses two phase commit.

- Fixed an undo bug.  Symptom: attempting to examine the undo log revealed
  broken pickles.  Cause: the extension field was not being wrapped in
  psycopg2.Binary upon insert.  Solution: used psycopg2.Binary.
  Unfortunately, this doesn't fix existing transactions people have
  committed.  If anyone has any data to keep, fixing the old transactions
  should be easy.
